@startuml
left to right direction
skinparam classAttributeIconSize 0

' Entities
class User {
    +String id
    +String username
    +String password
    +String email
    +Instant createdAt
    +Goals goals
    +String role
}

class Goals {
    +double targetProtein
    +double targetCarbs
    +double targetFat
    +double targetCalories
}

class Meal {
    +String id
    +String userId
    +String storageId
    +String name
    +double weight
    +Nutrition nutrition
    +Instant consumedAt
}

class Nutrition {
    +double protein
    +double carbs
    +double fat
    +double calories
}

class Storage {
    +String id
    +String userId
    +String name
    +double totalWeight
    +double consumedWeight
    +double weightPerMeal
    +Nutrition nutritionPer100g
    +double lowStockThreshold
    +Instant createdAt
    +Instant updatedAt
}

' Repositories
interface UserRepository
interface MealRepository
interface StorageRepository

' Services
interface UserService
class UserServiceImpl
interface MealService
class MealServiceImpl
interface StorageService
class StorageServiceImpl
interface AuthService
class AuthServiceImpl

' Controllers
class AuthenticationController
class MealsController
class StorageController

' Relationships
UserServiceImpl --> UserRepository
MealServiceImpl --> MealRepository
MealServiceImpl --> StorageService
StorageServiceImpl --> StorageRepository
AuthServiceImpl --> UserService
AuthServiceImpl --> JwtUtil
AuthenticationController --> AuthService
AuthenticationController --> UserService
MealsController --> MealService
StorageController --> StorageService

User "1" -- "1" Goals
Meal "1" -- "1" Nutrition
Storage "1" -- "1" Nutrition

UserServiceImpl ..|> UserService
MealServiceImpl ..|> MealService
StorageServiceImpl ..|> StorageService
AuthServiceImpl ..|> AuthService
@enduml
